# reddish

./: CHANGELOG.md  LICENSE  README.md  reddish.cabal  shell.nix
src/: Reddish.hs
src/Reddish/: Commands.hs  Driver.hs  RESP.hs
test/: Reddish.hs
