cabal-version:      3.0
name:               reddish
version:            0.0.1.0
synopsis:           Redis client for Haskell

-- A longer description of the package.
-- description:
homepage:           https://github.com/Pitometsu/reddish#readme

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Yurii Pytomets
maintainer:         pitometsu@gmail.com

-- A copyright notice.
-- copyright:
category:           Database
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Reddish
                      Reddish.RESP
                      Reddish.Commands
                      Reddish.Driver

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , binary
                    , bytestring
                    , either
                    , exceptions
                    , mtl
                    , network-simple
                    -- , singleton-nats
                    , text
                    , vinyl
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: BangPatterns
                      , BlockArguments
                      , ConstraintKinds
                      , DataKinds
                      , DeriveGeneric
                      , DerivingStrategies
                      , DerivingVia
                      , DisambiguateRecordFields
                      , DuplicateRecordFields
                      , FlexibleContexts
                      , FlexibleInstances
                      , GADTs
                      , KindSignatures
                      , LambdaCase
                      , MultiWayIf
                      , NamedFieldPuns
                      , NumericUnderscores
                      , OverloadedStrings
                      , OverloadedLabels
                      , PatternSynonyms
                      , PolyKinds
                      , RankNTypes
                      , ScopedTypeVariables
                      , StandaloneDeriving
                      , StandaloneKindSignatures
                      , TupleSections
                      , TypeApplications
                      , TypeFamilies
                      , TypeFamilyDependencies
                      , TypeOperators
                      , UndecidableInstances
                      , ViewPatterns

test-suite reddish
    default-language: Haskell2010
    default-extensions: PackageImports
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Reddish.hs
    build-depends:    base ^>=4.14.1.0
                    , reddish
    ghc-options:      -main-is Reddish.test
